fixed side menu icons on Safari

--- a/public/modules/plans/css/side-menu.css
+++ b/public/modules/plans/css/side-menu.css
@@ -69,6 +69,7 @@ md-sidenav .actionf {
 	text-align: center;
 	padding: 5px;
 	display: inline-block;
+    float: left;
 	overflow: hidden;
     color: white;
     background: transparent;
